fixed card spacing

--- a/style.css
+++ b/style.css
@@ -31,9 +31,14 @@ body {
   text-align: center;
 }
 
+.content {
+  padding: 0 50px;
+}
+
 .cover-image img {
   width: 100%;
   border-radius: 20px 20px 0px 0px;
+  margin: 0 -20px;
   margin-bottom: 20px;
 }
 
@@ -46,7 +51,7 @@ body {
 .plan {
   background-color: hsl(225, 100%, 98%);
   border-radius: 10px;
-  padding: 15px;
+  padding: 25px;
 
   display: flex;
   justify-content: space-between;
